@@ -1,3 +1,12 @@
+2009-01-07  Pierre-Olivier Latour  <pol@apple.com>
+
+        Improve DRT API existence test in animation-test-helpers.js & transition-test-helpers.js.
+
+        https://bugs.webkit.org/show_bug.cgi?id=23168
+
+        * animations/animation-test-helpers.js:
+        * transitions/transition-test-helpers.js:
+
 2009-01-06  Pierre-Olivier Latour  <pol@apple.com>
 
         Reviewed by Darin Adler.
